css/main.css
/* ... */
/*Header*/

.nav>li>a:hover, .nav>li>a:focus {
  background-color: #22224D;
}

li.current {
    background: #090930;
}

#header {
  position: relative;
  margin-bottom: -100px;
  overflow: hidden;
  height: inherit;
}

.header-panel {
  position: absolute;
  width: 100%;
  min-height: 100px;
  top: 0;
  margin-top: 50px;
  z-index: 55;
}

.header-menu {
  width: 100%;
  z-index: 200;
}

.header-menu.sticky {
  position: fixed;
  margin: 0;
  -moz-animation: bounceInDown 0.5s;
  -webkit-animation: bounceInDown 0.5s;
  animation: bounceInDown 0.5s;
  background: #16163A;
}

.header-menu.fixed {
  -moz-animation: bounceIn 0.5s;
  -webkit-animation: bounceIn 0.5s;
  animation: bounceIn 0.5s;
  background: #16163A;
  min-height: 70px;
}

.header-menu > .box {
  min-height: 75px;
}

.header-bg {
  position: relative;
  height: 750px;
  overflow: hidden;
}

.header-bg:before {
  top: 0;
  position: absolute;
  display: block;
  width: 100%;
  height: 100%;
  content: "";
  z-index: 40;
}

.header-cta {
  position: absolute;
  width: 100%;
  padding: 0 15px;
  z-index: 50;
  bottom: 150px;
}

.header-bg {
  position: relative;
  height: 750px;
  overflow: hidden;
}

.navbar-brand {
  float: left;
  padding: 4px 0;
  font-size: 18px;
  line-height: 20px;
}

.navbar-nav {
  float: right;
  padding: 10px 0;
}

.nav>li>a {
  font-size: 14px;
}

/*Pantallas*/

@media (max-width: 1300px) {

  .container {
    max-width: 1040px;
  }

  h1, .h1 {
    font-size: 30px;
  }

  h4, .h4 {
    line-height: 21px;
  }

}

@media (max-width: 1150px) {

  .container {
    max-width: 880px;
  }

}

@media (max-width: 1000px) {

  .container {
    max-width: 650px;
  }

}

@media (max-width: 800px) {

  table.table.table-striped {
    font-size: 12px;
  }

  #inicio h1 {
    font-size: 21px;
    line-height: 30px;
  }

  .pilares {
    display: none;
  }

}

@media (max-width: 400px) {

  section {
    margin: 50px 0;
  }

  table.table.table-striped {
    font-size: 10px;
  }

  h2, .h2 {
    font-size: 36px;
  }

  #areas .col-md-2 {
    margin-bottom: 0px;
  }

}

